--- a/donate/donate-style.css
+++ b/donate/donate-style.css
@@ -10,9 +10,14 @@
     margin: 0 auto;
     padding: 0 0px;
 }
+
 body {
-    margin: 0;
     font-family: var(--body-font);
+    background-color: var(--white-color);
+    margin: 0;
+    color: var(--dark-color);
+    line-height: 1.6;
+    overscroll-behavior: none;
 }
 
 main-body {
