--- a/pastcontests/pastcontests-style.css
+++ b/pastcontests/pastcontests-style.css
@@ -19,6 +19,7 @@ body {
     margin: 0;
     color: var(--dark-color);
     line-height: 1.6;
+    overscroll-behavior: none;
 }
 
 main-body {
