--- a/team/about-style.css
+++ b/team/about-style.css
@@ -18,6 +18,7 @@ body {
     margin: 0;
     color: var(--dark-color);
     line-height: 1.6;
+    overscroll-behavior: none;
 }
 
 main-body {
